# plivo

./: .gitignore  AUTHORS  ChangeLog  MANIFEST.in  Makefile  README.md  requirements.txt  setup.cfg
plivo/: settings.py  urls.py  wsgi.py
plivoapis/: authentication.py  models.py  serializers.py  tests.py  urls.py  views.py
plivoapis/migrations/: 0001_initial.py
