[metadata]
name = plivo
version = 2016.2.8
summary = plivo apis
description-file =
    README.rst
author = Jignasha
author-email = jignasha_86@yahoo.co.in
classifier =
    Development Status :: 5 - Development/Beta
    Environment :: Linux
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Topic :: Internet :: WWW/HTTP

[files]
packages =
    plivoapis
